// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.21.1'
}

sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

java {
    modularity.inferModulePath.set(true)
}

application {
    mainModule = 'labirintoa' // name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}



// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.Main"


javafx {
    version = "12"
    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
}

repositories {
    mavenCentral()
}

def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}

ext.os = org.gradle.internal.os.OperatingSystem.current()

jlink {

    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'labirintoa'
    }

    jpackage {
        if (os.windows) {
            installerType = "exe"
            // jPackageHome = "c:\\Program Files\\Java\\jdk-14.0.2"
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
        else if (os.linux) {
            installerType = "deb"
            installerOptions += [
                    '--linux-shortcut'
            ]
        }



    }
}
